Update index.html with commhealth

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
      
 
+      <p class="info">
+      <!-- Small efforts, day in, day out. -->
+      <a href="https://materea.github.io/commhealth">Community Health</a>
+    </p>
+  
     <p class="info">
       <!-- Small efforts, day in, day out. -->
       <a href="https://materea.github.io/obgyn">Obstetrics & Gynecology</a>
