--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <br>
       going to make it better</h1>
 
+      <div class="mib-quotes">
+
+      </div>
      
       <div class="info">
         <p>
