--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <br>
       going to make it better</h1>
 
-      <div class="mib-quotes">
-
+      <div class="btn">
+        <button class="flat-btn up"><a href="about-temp2.html">About us</a></button>
       </div>
+      
      
       <div class="info">
         <p>
