--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       src="img/mtr.png"
     />
 
+    <div class="container">
     <!-- <div class="logo-hero">
       <p>mtr.</p>
     </div> -->
@@ -44,6 +45,8 @@
             </p>
       </div>
       
+
+    </div>
 
 
   
