--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       going to make it better</h1>
 
       <div class="btn">
-        <button class="flat-btn up"><a href="about-temp2.html">About us</a></button>
+        <a href="about-temp2.html"> <button class="flat-btn up">About us</button> </a>
       </div>
       
      
