updated styles; about join us btn

--- a/about-temp2.html
+++ b/about-temp2.html
@@ -50,7 +50,7 @@
     <section class="landing-pg">
 
       <div>
-        <img src="images/hero2.jpg" alt="">
+        <img src="img/hero2.jpg" alt="">
     </div>
     
     <hr style="margin: 3rem 0;">
