--- a/index.html
+++ b/index.html
@@ -24,12 +24,77 @@
     <!-- <div class="logo-hero">
       <p>mtr.</p>
     </div> -->
-    <h1><span class="text blue">I am</span> 
+
+
+    <!-- <h1><span class="text blue">I am</span> 
       <br>
-      going to make it better</h1>
+      going to make it better</h1> -->
+
+      <!-- <div id="text-container">
+        <span id="text1"></span>
+        <span id="text2"></span>
+    </div>
+    
+    <svg id="filters">
+        <defs>
+            <filter id="threshold">
+                <feColorMatrix in="SourceGraphic" type="matrix" values="1 0 0 0 0
+                      0 1 0 0 0
+                      0 0 1 0 0
+                      0 0 0 255 -140" />
+            </filter>
+        </defs>
+    </svg> -->
+
+
+  
+    <div class="section full-height over-hide px-4 px-sm-0">
+      <div class="container">
+        <div class="row full-height justify-content-center">
+          <div class="padding-tb">
+            <div class="section mx-auto text-center slider-height-padding">
+                    <input class="checkbox frst" type="radio" id="slide-1" name="slider" checked/>
+                    <label for="slide-1"></label>
+                    <input class="checkbox scnd" type="radio" name="slider" id="slider-2"/>
+                    <label for="slider-2"></label>
+                    <input class="checkbox thrd" type="radio" name="slider" id="slider-3"/>
+                    <label for="slider-3"></label>
+                    <input class="checkbox foth" type="radio" name="slider" id="slider-4"/>
+                    <label for="slider-4"></label>
+                    <input class="checkbox fifth" type="radio" name="slider" id="slider-5"/>
+                    <label for="slider-5"></label>
+                    <input class="checkbox sixth" type="radio" name="slider" id="slider-6"/>
+                    <label for="slider-6"></label>
+              <ul>
+                <li>
+                  <span>COMMUNITY HEALTH</span>
+                  </li>
+                <li>
+                  <span>OBSTETRICS & GYNECOLOGY</span>
+                  </li>
+                <li>
+                  <span></span>
+                  </li>
+                <li>
+                  <span>ANESTHESIOLOGY</span>
+                  </li>
+                  <li>
+                    <span></span>
+                    </li>
+                    <li>
+                      <span>MEDICAL STUDENT</span>
+                      </li>
+                </ul>
+              </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+
 
       <div class="btn">
-        <a href="about-temp2.html"> <button class="flat-btn up">About us</button> </a>
+        <a href="about-temp2.html"> <button class="flat-btn">About us</button> </a>
       </div>
       
 
@@ -54,6 +119,7 @@
 
   
  
-<script src="script.js"></script>
+<script src="main.js"></script>
+<script src="script2.js"></script>
 </body>
 </html>
