--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <a href="https://materea.github.io/obgyn">Obstetrics & Gynecology</a> -->
 
           <a href="https://materea.github.io/anesth">Anesthesiology</a>
-          <a href="https://materea.github.io/ophtha">Family Medicine</a>
+          <a href="https://materea.github.io/familymed">Family Medicine</a>
           <a href="https://materea.github.io/ophtha">Ophthalmology</a>
           <a href="https://materea.github.io/orl">Otorhinolaryngology</a>
 
