added pedo, commhealth, obgyn to home

--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
           <a href="https://materea.github.io/obgyn">Obstetrics & Gynecology</a> -->
 
           <a href="https://materea.github.io/anesth">Anesthesiology</a>
+          <a href="https://materea.github.io/commhealth">Community Health</a>
           <a href="https://materea.github.io/familymed">Family Medicine</a>
+          <a href="https://materea.github.io/obgyn">Obstetrics & Gynecology</a>
           <a href="https://materea.github.io/ophtha">Ophthalmology</a>
           <a href="https://materea.github.io/orl">Otorhinolaryngology</a>
+          <a href="https://materea.github.io/pedo">Pediatrics</a>
+
 
         
         </div>
