--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 
     </div>
         
-    <div class="btn">
+    <!-- <div class="btn">
       <a href="about-temp2.html"> <button class="flat-btn">About us</button> </a>
-    </div>
+    </div> -->
     </div>
 
       
