--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
     </div>
 
     <footer>
-      <a href="#">About Us</a>
+      <a href="/about-temp2.html">about us</a>
       <div class="separator"></div>
-      <a href="#">Contact Us</a>
+      <a href="#">contact us</a>
   </footer>
 
     
