contact us link

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <footer>
       <a href="/about-temp2.html">about us</a>
       <div class="separator"></div>
-      <a href="#">contact us</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdx2teDCmW6ivSeKLQg7zF_jy7Yfg_1Gqm84_UT0PQPATsNug/viewform?usp=sf_link">contact us</a>
   </footer>
 
     
