--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="course-heading">familymed</div>
         </a>
 
-        <a href="" class="course-card">
+        <a href="https://materea.github.io/med" class="course-card">
           <div class="course-icon" style="background-image: url('/img/home-icons/icons\ \(4\).png');"></div>
           <div class="course-image" style="background-image: url('img/internal-medicine-copy.jpg');"></div>
             <div class="course-heading">med</div>
@@ -128,7 +128,7 @@
             <div class="course-heading">psych</div>
         </a>
 
-        <a href="https://materea.github.io/" class="course-card">
+        <a href="https://materea.github.io/sgr" class="course-card">
           <div class="course-icon" style="background-image: url('/img/home-icons/icons\ \(11\).png');"></div>
           <div class="course-image" style="background-image: url('img/surgery.png');"></div>
             <div class="course-heading">surg</div>
